--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.jpa.defer-datasource-initialization=true
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console-locadora
+server.port=8090
